Version 1.44:
	- Modified NFS poly selection to avoid saving nonexistent polynomials
	- Fixed a bug in the relation readin code that caused crashes when 
		initializing empty dependencies (thanks Jeff Gilchrist)


Version 1.43: 10/18/09
	- Made the GMP library mandatory
	- Removed the arbitrary precision math library, replaced with GMP
	- Modified the NFS relation handling code to allow 63-bit 'a' 
		values and 48-bit prime factors. The code now also performs
		runlength-encoding on the list of prime factors
	- Added 64-bit modmul operations to all builds
	- Added checks that the input NFS number corresponds to the input
		NFS polynomials (thanks Tom Womack)
	- NFS square root changes:
		- Optimized the brute force square root code, especially
		  when dealing with degree > 6 (thanks Serge Batalov)
		- Modified the NFS relation reading code to ignore 
		  relations that would not participate in dependencies anyway.
		  This also makes the NFS square root a bit simpler
		- Modified the initialization to be a little more 
		  robust (thanks andi47)
	- Add support for degree 8 NFS polynomials (thanks Serge Batalov)
	- Deleted the ancient unskewed NFS polynomial selector
	- Removed now-unused double-double code
	- Reset the number of relations and ideals properly when reading
		LP relations with increasing max weight (thanks Greg Childers)
	- Increased the input size limit to ~300 digits
	- Adjusted the library link order in the makefile
	- Added float.h for unix builds (thanks Christian Cornelssen)


Version 1.42: 7/19/09
	- NFS polynomial selection changes:
		- Added support for generating degree-4 and degree-6
		  GNFS polynomials, as well as some tuning for the degree-4
		  case. Degree 6 is not completely done (needs a better
		  root sieve and parameter selection)
		- Added a tweak to the end of stage 1 that makes sure
		  most polynomials passed to stage 2 have third-to-last
		  coefficients that are small enough. This allows stage 